objects/SBC_SOB_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_ERISA_Qualified__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Is_this_Group_subject_to_ERISA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ERISA Qualified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Opportunity__r.Account.Account_Executive__r.FirstName + &apos; &apos; + Opportunity__r.Account.Account_Executive__r.LastName</formula>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Group_Number__c</fullName>
        <formula>Opportunity__r.Account.GroupNumbers__c</formula>
        <label>Account Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Opportunity__r.Account.Account_Manager__r.FirstName + &apos; &apos; + Opportunity__r.Account.Account_Manager__r.LastName</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Date__c</fullName>
        <formula>Opportunity__r.Account.Active_Renewal_Date__c</formula>
        <label>Account Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Situs_State__c</fullName>
        <formula>TEXT(Opportunity__r.Account.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_SBC_Completion_Date_BD__c</fullName>
        <formula>CASE(MOD(Actual_SBC_Completion_Date__c - DATE(1900, 1, 7), 7), 0,Actual_SBC_Completion_Date__c - 2, 6,Actual_SBC_Completion_Date__c - 1,Actual_SBC_Completion_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual SBC Completion Date BD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_SBC_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual SBC Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CEP_Approval_Formula__c</fullName>
        <formula>IF(
CEP_Approval__c,
&quot;Yes&quot;,
&quot;No&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CEP Approval Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CEP Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Standard Contract Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Contract_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Contract Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_SBC_Requested__c</fullName>
        <label>Custom SBC Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_SOB_Requested__c</fullName>
        <label>Custom SOB Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_SBC_Requested_BD__c</fullName>
        <formula>CASE(MOD(Date_SBC_Requested__c - DATE(1900, 1, 7), 7), 0,Date_SBC_Requested__c + 1, 6,Date_SBC_Requested__c + 2,Date_SBC_Requested__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date SBC Requested BD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SBC_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SBC Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPIC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enhanced Privacy ID</inlineHelpText>
        <label>EPIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <formula>IF( AND(TEXT(Custom_SBC_Requested__c) = &apos;Yes&apos;, Revision__c  &lt;&gt; True), &apos;New COM2 SBC Request&apos;, &apos;Revision to Existing SBC Request&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_SBC_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated SBC Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>text(Opportunity__r.Account.Group_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPCC_Code__c</fullName>
        <defaultValue>&apos; &apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>HPCC Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MEC__c</fullName>
        <label>Minimum Essential Coverage (MEC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MV__c</fullName>
        <label>Minimum Value Standards (MV)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ICR_ID_s__c</fullName>
        <description>To store all the related Implementation case record ID&apos;s to an Opportunity.
Backend field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity ICR ID&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SBC_SOB_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sale</fullName>
                </value>
                <value>
                    <fullName>Post-Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked sends the Email to SBC team</description>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnaround_Time__c</fullName>
        <formula>IF(Actual_SBC_Completion_Date_BD__c &lt; Date_SBC_Requested_BD__c, 0, 
   Actual_SBC_Completion_Date_BD__c - Date_SBC_Requested_BD__c - 
   FLOOR((Actual_SBC_Completion_Date_BD__c - Date_SBC_Requested_BD__c)/7) *2 -
   IF (MOD(Date_SBC_Requested_BD__c - DATE(1900, 1, 7), 7)&gt; 
       MOD(Actual_SBC_Completion_Date_BD__c - DATE(1900, 1, 7), 7), 2, 0
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnaround Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom SBC/SOB Request</label>
    <listViews>
        <fullName>Completed_SBC_Records</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Actual_SBC_Completion_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date_SBC_Requested__c</columns>
        <columns>Comments__c</columns>
        <columns>Account_Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Custom_SBC_Requested__c</columns>
        <columns>Turnaround_Time__c</columns>
        <columns>Estimated_SBC_Completion_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_SBC_Completion_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Custom_SBC_Requested__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Completed SBC Records</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_SBC_Records</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Actual_SBC_Completion_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date_SBC_Requested__c</columns>
        <columns>Comments__c</columns>
        <columns>Account_Situs_State__c</columns>
        <columns>Group_Size__c</columns>
        <columns>Custom_SBC_Requested__c</columns>
        <columns>Turnaround_Time__c</columns>
        <columns>Estimated_SBC_Completion_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_SBC_Completion_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Custom_SBC_Requested__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>In Progress SBC Records</label>
    </listViews>
    <nameField>
        <displayFormat>SBC/SOB-{0000}</displayFormat>
        <label>Custom SBC/SOB Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom SBC/SOB Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_SBC_Completion_Date_Validation</fullName>
        <active>true</active>
        <description>Actual SBC Completion Date cannot be less than Date SBC Requested</description>
        <errorConditionFormula>Actual_SBC_Completion_Date__c &lt; Date_SBC_Requested__c</errorConditionFormula>
        <errorDisplayField>Actual_SBC_Completion_Date__c</errorDisplayField>
        <errorMessage>Actual SBC Completion Date cannot be before Date SBC Requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Record_Once_SBC_Completed</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
AND
(
NOT ISBLANK(PRIORVALUE( Actual_SBC_Completion_Date__c )),
NOT ISBLANK(Actual_SBC_Completion_Date__c ), ($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;System Admin&apos; )
),
AND
(
ISCHANGED (Actual_SBC_Completion_Date__c),
ISBLANK (Actual_SBC_Completion_Date__c ),
($Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;System Admin&apos; ))
)</errorConditionFormula>
        <errorDisplayField>Actual_SBC_Completion_Date__c</errorDisplayField>
        <errorMessage>This request has been completed and cannot be updated</errorMessage>
    </validationRules>
</CustomObject>